# invenioup

./: .env.example  .gitignore  .invenio  Dockerfile  Pipfile  README.md  docker-compose.yml  invenio.cfg
.github/workflows/: build-deploy.yml  build-test-lint.yml  deploy.yml
app_data/vocabularies/: resource_types.yaml
assets/less/: theme.config  theme.less
assets/templates/: index.js
assets/templates/custom_fields/: index.js
docker/: entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/conf.d/: default.conf
docker/pgadmin/: servers.json
docs/: local-setup.md
helm/: values.yaml
helm/secrets/: README.md  app-secrets.yaml.example  db-credentials.yaml.example  s3-credentials.yaml.example
ops/: friends-deploy.tmpl.yaml
scripts/: bootstrap-deploy.sh  invenio-first-run-init.sh  invenio-k8s-rdm-bootstrap.sh  smoke-test.sh
site/: .gitkeep  setup.cfg
site/invenioup/: __init__.py  tasks.py  views.py  webpack.py
templates/semantic-ui/invenio_app_rdm/: frontpage.html
tests/e2e/: auth.spec.ts  package-lock.json  package.json  playwright.config.ts  record.spec.ts  smoke.spec.ts
