[metadata]
name = invenioup
version = 1.0.0
description = Notch8 InvenioRDM Demo Instance
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
invenio_base.blueprints =
invenio_base.api_blueprints =
invenio_celery.tasks =
invenio_assets.webpack =
