[metadata]
name = invenioup
version = 1.0.0
description = Notch8 InvenioUp Demo Instance
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
invenio_base.blueprints =
    invenioup_views = invenioup.views:create_blueprint
invenio_assets.webpack =
    invenioup_theme = invenioup.webpack:theme
invenio_base.api_blueprints =
invenio_celery.tasks =
